pld-comp/tests/ifcc-test-output/testfiles-3_2_test_aff_expr/gcc-compile.txt
input.c: In function ‘main’:
input.c:7:9: error: redeclaration of ‘a’ with no linkage
     int a,b,v;
         ^
input.c:2:9: note: previous definition of ‘a’ was here
     int a=8;
         ^
input.c:7:11: error: redeclaration of ‘b’ with no linkage
     int a,b,v;
           ^
input.c:3:9: note: previous definition of ‘b’ was here
     int b=26;
         ^
input.c:9:13: error: expected ‘;’ before ‘return’
     a,b,v=12
             ^
             ;
     return a+b,a,a/12,7;
     ~~~~~~   

return code: 1
